@@ -5,6 +5,11 @@
 
 2014-02-28  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* Geodetic.h:
+	* UniversalTransverseMercator.h: 
+
+2014-02-28  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* libtitania-standard.cproj:
 	* Camera.h: 
 
